src/objects/Routing_Table__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article used to facilitate understanding of who should be responsible of which case/enquiry</description>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP - Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS - Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP - Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW - Installation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS - Electrification Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV - Medium Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG - Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS - Grid Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE - Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA - Various</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Email__c</fullName>
        <label>SPOC Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Location__c</fullName>
        <description>This is the location where the SPOC sits</description>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Sales Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Mobile__c</fullName>
        <label>SPOC Sales Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Phone__c</fullName>
        <label>SPOC Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales__c</fullName>
        <description>Person responsible for any sales question</description>
        <label>SPOC Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Email__c</fullName>
        <label>SPOC Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Location__c</fullName>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Service Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Mobile__c</fullName>
        <label>SPOC Service Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Phone__c</fullName>
        <label>SPOC Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Service__c</fullName>
        <label>SPOC Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Email__c</fullName>
        <label>SPOC Technical Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Location__c</fullName>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Technical Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Mobile__c</fullName>
        <label>SPOC Technical Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Phone__c</fullName>
        <label>SPOC Technical Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical__c</fullName>
        <label>SPOC Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Sent_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Sent for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Routing Table</label>
    <pluralLabel>Routing Table</pluralLabel>
</CustomObject>